# crawlingo

./: .gitignore  CRAWLINGO_DEVELOPER_HANDBOOK.md  Cargo.toml  LICENSE  Makefile  README.md  board.tldr  build-merge.js  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  docs.yml  release.yml
api/: waitlist.js
benches/: auto_matcher.rs  fetcher.rs  scorer.rs  selector.rs
docs/: .env  CNAME  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js  vite.config.ts
docs-v2/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js
docs-v2/api/: waitlist.js
docs-v2/src/: App.tsx
docs-v2/src/components/layout/: DocsLayout.tsx  Header.tsx  Sidebar.tsx
docs-v2/src/components/ui/: BentoGrid.tsx  EagleLogo.tsx  HoverBorderCard.tsx  SelectorSimulator.tsx  TracingScrollBeam.tsx
docs-v2/src/pages/: AdvancedPage.tsx  ArchitecturePage.tsx  ChangelogPage.tsx  FeaturesPage.tsx  GettingStartedPage.tsx  IntroductionPage.tsx  RoadmapPage.tsx  TroubleshootingPage.tsx  WaitlistPage.tsx
docs/content/docs/: advanced.mdx  api-reference.mdx  architecture.mdx  best-practices.mdx  glossary.mdx  index.mdx  meta.json  migration-guides.mdx  sdk.mdx  troubleshooting.mdx
docs/content/docs/guides/: concepts.mdx  examples.mdx  integrations.mdx  meta.json  nodejs-sdk.mdx  python-sdk.mdx  sdk.mdx
docs/content/docs/recipes/: extract-tables.mdx  login-crawl.mdx  meta.json  resume-crawl.mdx  retry-failed.mdx  rotate-proxies.mdx
docs/content/docs/start/: faq.mdx  features.mdx  first-crawl.mdx  first-dataset.mdx  getting-started.mdx  meta.json  project-structure.mdx  why-crawlingo.mdx
docs/content/docs/tutorials/: ai-dataset-generator.mdx  blog-crawler.mdx  documentation-crawler.mdx  ecommerce-crawler.mdx  jobs-scraper.mdx  meta.json  news-crawler.mdx  price-tracker.mdx  research-pipeline.mdx  (+2 more)
docs/src/: App.tsx
docs/src/app/: global.css  layout.tsx
docs/src/components/: BentoGrid.tsx  DemoSlideshow.tsx  EagleLogo.tsx  HoverBorderCard.tsx  SelectorSimulator.tsx
docs/src/lib/: layout.shared.tsx  shared.ts
docs/src/pages/: APIReferencePage.tsx  ChangelogPage.tsx  DemoPage.tsx  IntegrationsPage.tsx  SDKPage.tsx
docs/src/styles/: globals.css
document/: 00_PROJECT_STATUS.md  01_ARCHITECTURE.md  02_CODEBASE_MAP.md  03_ENGINEERING_AUDIT.md  04_TECHNICAL_DEBT.md  05_ROADMAP.md  06_DEVELOPMENT_GUIDE.md  07_CONTRIBUTING_GUIDE.md  08_TESTING_GUIDE.md  09_RELEASE_GUIDE.md  10_PERFORMANCE.md  11_SECURITY_REVIEW.md  12_API_DESIGN.md  13_FEATURE_INDEX.md  14_CHANGELOG_INTERNAL.md  15_AGENT_MEMORY.md  16_DESIGN_DECISIONS.md  17_CODE_STYLE.md  18_BUG_TRACKER.md  19_IDEAS.md  20_PRODUCTION_CHECKLIST.md  21_EXECUTION_FLOW.md  22_DATA_FLOW.md  23_MODULE_DEPENDENCY.md  24_PAGE_MODEL.md  25_FETCH_PIPELINE.md  26_PARSER_PIPELINE.md  27_SELECTOR_ENGINE.md  28_DATASET_ENGINE.md  29_PLUGIN_SYSTEM.md  30_DIRECTORY_GUIDE.md  31_CODE_OWNERSHIP.md  32_RUNTIME.md  33_REFACTOR_STRATEGY.md  34_ARCHITECTURE_DECISIONS.md  35_ENGINE_SCORECARD.md  CLEANUP_REPORT.md  CODEBASE_CLEANUP.md  CORE_ARCHITECTURE.md  CORE_REFACTOR_ANALYSIS.md  (+17 more)
document/api_reference/: auto_matcher.md  cli.md  crawler.md  dataset.md  dom_tree.md  fetch.md  fingerprint.md  mcp.md  page.md  sdk_nodejs.md  sdk_python.md  selector_engine.md  session.md  watcher.md
document/developer_guide/: 01_architecture_overview.md  02_development_setup.md  03_codebase_map.md  04_testing.md  05_release.md  06_contributing.md  07_code_style.md  08_design_decisions.md  09_production_deployment.md
document/user_guide/: 01_getting_started.md  02_fetch_and_select.md  03_dataset_extraction.md  04_auto_healing.md  05_crawling.md  06_change_detection.md
examples/: 01_simple.js  01_simple.py  02_dataset.js  02_dataset.py  03_crawler.js  03_crawler.py  04_monitor.js  04_monitor.py  05_hooks.py  06_session.py
sdk/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
sdk/nodejs/native/: Cargo.toml
sdk/nodejs/native/src/: lib.rs
sdk/nodejs/scripts/: copy-native-assets.cjs
sdk/nodejs/src/: crawl.ts  dataset.ts  element.ts  index.ts  native.d.ts  native.js  page.ts  session.ts  watch.ts
sdk/nodejs/tests/: amazon-scrape.cjs  integration.test.ts  smoke.cjs  test_all_apis.cjs
sdk/python/: README.md  pyproject.toml
sdk/python/crawlingo/: __init__.py  _crawlingo_core.pyi  cli.py  crawl.py  dataset.py  element.py  exceptions.py  hooks.py  mcp.py  page.py  session.py  types.py  watch.py
sdk/python/tests/: test_all_apis.py  test_import.py
src/: error.rs  lib.rs
src/change/: detector.rs
src/crawl/: crawler.rs
src/dataset/: builder.rs  export.rs  extractor.rs  mod.rs  schema.rs  stream.rs
src/engine/: dns_cache.rs  fetcher.rs  mod.rs  pool.rs  rate_limiter.rs  session.rs
src/extraction/: mod.rs
src/fingerprint/: dom.rs  mod.rs  store.rs
src/matcher/: auto_matcher.rs  mod.rs  scorer.rs
src/parser/: document.rs  mod.rs  streaming.rs
src/queue/: mod.rs  request_queue.rs
src/selector/: css.rs  mod.rs  regex_selector.rs  text_anchor.rs  xpath.rs
src/watch/: monitor.rs
tests/: edge_cases_test.rs  integration_test.rs
tests/fixtures/: changed.html  edge_cases.html  simple.html
waitlist/: .env  .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
waitlist/api/: waitlist.js
waitlist/src/: App.tsx
(+8 files in other folders)
