[package]
name = "crawlingo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "crawlingo"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# HTTP/Stealth client (wreq is the successor of rquest)
wreq = { version = "6.0.0-rc.29", features = ["cookies", "stream", "json", "socks", "hickory-dns"] }
wreq-util = "3.0.0-rc.12"

# HTML parsing
lol_html = "2.0"

# DNS resolver cache
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
moka = { version = "0.12", features = ["future"] }

# Concurrency & Lock-free
dashmap = "5.5"
crossbeam = "0.8"

# Rate Limiter
governor = "0.6"
tower = "0.4"

# Similarity algorithms
strsim = "0.11"

# Fingerprint storage
sled = "0.34"
bincode = "1.3"

# Parallelism
rayon = "1.10"

# Zero-copy & SIMD
bytes = "1.6"
memchr = "2.7"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Selectors cache
once_cell = "1.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Export backends
csv = "1.3"
arrow = { version = "51" }
parquet = { version = "51", features = ["arrow"] }

# FFI and MCP Web server
axum = "0.7"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
url = "2.5"
chrono = { version = "=0.4.38", features = ["serde"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "py-clone"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3"
