[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crawlingo"
version = "0.1.0"
description = "Crawlingo - next-generation web scraping and monitoring framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
crawlingo = "crawlingo.cli:main"

[tool.maturin]
features = ["python"]
manifest-path = "../../Cargo.toml"
module-name = "crawlingo._crawlingo_core"
python-source = "."

[tool.cibuildwheel]
build-frontend = "maturin"
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
linux = "manylinux2014_x86_64 manylinux2014_aarch64"
macos = "universal2"
windows = "win32 win_amd64"
before-all = "pip install maturin"
test-command = "python -c \"import crawlingo; print(crawlingo.__version__)\""
environment = { CIBW_BUILD_VERBOSITY = "1" }
