[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crawlingo"
version = "0.1.0"
description = "Crawlingo - next-generation web scraping and monitoring framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
crawlingo = "crawlingo.cli:main"

[tool.maturin]
features = ["python"]
manifest-path = "../../Cargo.toml"
module-name = "crawlingo._crawlingo_core"
python-source = "."

[tool.cibuildwheel]
build-frontend = "pip"
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
before-all = "pip install maturin"
test-command = "python -c \"import crawlingo; print(crawlingo.__version__)\""
environment = { CIBW_BUILD_VERBOSITY = "1" }

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$PATH:$HOME/.cargo/bin", CIBW_BUILD_VERBOSITY = "1" }
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]
